tests/paczka1/fuzzy1/71896630.err
Error in line 7: v1DWKy8mwe A24 71,3
Error in line 25: S20 A24 67,5
